salesforce_app/force-app/main/default/objects/Daily_Log__c/Daily_Log__c.object-meta.xml
<CustomObject>
    <label>Intern Diary</label>
    <nameField>
        <displayFormat>DL-{00000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intern Diaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>