salesforce_app/force-app/main/default/objects/Daily_Log__c/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <label>Blockers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>