salesforce_app/force-app/main/default/objects/Daily_Log__c/fields/Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent__c</fullName>
    <label>Hours Spent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>