salesforce_app/force-app/main/default/objects/Daily_Log__c/fields/Intern__c.field-meta.xml
<CustomField>
    <fullName>Intern__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intern</label>
    <referenceTo>Intern__c</referenceTo>
    <relationshipLabel>Daily Logs</relationshipLabel>
    <relationshipName>Daily_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>