salesforce_app/force-app/main/default/objects/Daily_Log__c/fields/Learnings__c.field-meta.xml
<CustomField>
    <fullName>Learnings__c</fullName>
    <label>Learnings</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>