salesforce_app/force-app/main/default/objects/Daily_Log__c/fields/Submission_Link__c.field-meta.xml
<CustomField>
    <fullName>Submission_Link__c</fullName>
    <label>Submission Link</label>
    <type>Url</type>
</CustomField>