salesforce_app/force-app/main/default/objects/Daily_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intern__c</columns>
    <columns>Hours_Spent__c</columns>
    <columns>Log_Date__c</columns>
    <columns>Work_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>